# scribit

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  release.yml
src/scribit/: __init__.py  app.py  audio.py  config.py  main.py
src/scribit/ui/: screens.py  widgets.py
tests/: test_basic.py
