[project]
name = "scribit"
dynamic = ["version"]
description = "Real-time Transcription TUI powered by AssemblyAI"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    { name = "leo01102", email = "leo01102@users.noreply.github.com" },
]
keywords = ["transcription", "audio", "tui", "assemblyai", "textual", "real-time"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Topic :: Multimedia :: Sound/Audio :: Capture/Recording",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "assemblyai>=0.30.0",
    "python-dotenv>=1.0.0",
    "pyaudio>=0.2.14",
    "textual>=0.50.0",
    "rich>=13.0.0",
    "platformdirs>=4.0.0",
    "pyperclip>=1.8.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "hatch>=1.12.0",
    "textual-dev>=1.0.0",
]


[project.urls]
Homepage = "https://github.com/leo01102/scribit"
Issues = "https://github.com/leo01102/scribit/issues"
Repository = "https://github.com/leo01102/scribit"

[project.scripts]
scribit = "scribit.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "src/scribit/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/scribit"]

